--- a/views/thank-you-page.jade
+++ b/views/thank-you-page.jade
@@ -11,7 +11,7 @@ p(style='text-align: center;')
   img(src='https://cdn.jotfor.ms/img/check-icon.png', alt='', width='128', height='128')
 div(style='text-align: center;')
   h1(style='text-align: center;') Thank You!
-  p(style='text-align: center;') Your submission has been received.
+  p(style='text-align: center;') Your submission has been received. yeah yeah.
   br
   a.waves-effect.waves-light.btn-large.blue(href='/') Back to Home
 
